--- a/ITC.InfoTrack/Views/Shared/_topbar.cshtml
+++ b/ITC.InfoTrack/Views/Shared/_topbar.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-    var user = Context.Session.GetString("Username");
+    var user = Context.Session.GetString("UserName");
+   
 }
 
 <link href="~/css/headerbox.css" rel="stylesheet" />
