login spning added

--- a/ITC.InfoTrack/Views/Home/Index.cshtml
+++ b/ITC.InfoTrack/Views/Home/Index.cshtml
@@ -36,6 +36,9 @@
                         <div class="mt-4 text-center">
                             <button id="login" class="btn btn-primary w-md waves-effect waves-light" type="submit">Log In</button>
                         </div>
+                        <div id="spinner" class="text-center mt-3" style=" display:none;">
+                            <i class="fa fa-spinner fa-spin"></i> Logging in...
+                        </div>
 
                     </form>
 
@@ -63,7 +66,7 @@
     <script src="~/libs/node-waves/waves.min.js"></script>
     <script src="~/js/app.js"></script>
 }
-
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script>
     $(document).ready(function () {
         $("#loginForm").submit(function (event) {
@@ -73,6 +76,8 @@
                 UserName: $("#username").val(),
                 Password: $("#userpassword").val(),
             };
+            $("#spinner").show();
+            $("#login").prop("disabled", true);
 
             $.ajax({
                 url: "@Url.Action("DoLogin", "Default", new { area = "Login" })",
@@ -92,6 +97,11 @@
                 ,
                 error: function (xhr) {
                     alert("Login failed: " + xhr.responseText);
+                },
+                complete: function () {
+                    // Always hide spinner & enable button after response
+                    $("#spinner").hide();
+                    $("#login").prop("disabled", false);
                 }
             });
 
