--- a/ITC.InfoTrack/Views/Shared/_topbar.cshtml
+++ b/ITC.InfoTrack/Views/Shared/_topbar.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    var user = Context.Session.GetString("UserName");
+    var user = Context.Session.GetString("UserName"); 
    
 }
 
@@ -375,7 +375,7 @@
             <div class="dropdown d-inline-block user-dropdown">
                 <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                         data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img class="rounded-circle header-profile-user" src="~/images/users/avatar-2.jpg"
+                    <img class="rounded-circle header-profile-user" src="~/images/users/avater1.png"
                          alt="Header Avatar">
                     <span class="d-none d-xl-inline-block ms-1">@user</span>
                     <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
