--- a/ITC.InfoTrack/Areas/Dashboard/Views/Dashboard/Index.cshtml
+++ b/ITC.InfoTrack/Areas/Dashboard/Views/Dashboard/Index.cshtml
@@ -16,6 +16,28 @@
     <link href="~/libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css" rel="stylesheet" type="text/css" />
 
 }
+<style>
+    .form-control:focus {
+        outline: none; /* Remove default blue outline */
+        box-shadow: none !important;
+    }
+    .btn-primary{
+        background-color: #5664d2 !important;
+        border-color: #5664d2 !important;
+    }
+</style>
+<div class="row">
+    <div class="col-xl-12">
+        <div class="d-sm-flex align-items-center float-end mb-1 gap-2">
+            <a href="#" class="btn btn-primary btn-sm">Create Token</a>
+            <select class="form-control form-control-sm ms-2" id="dash_filter" onchange="FilterData()" style="width: auto;">
+                <option value="1" selected>Day</option>
+                <option value="2">Month</option>
+                <option value="3">1 Year</option>
+            </select>
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class="col-xl-12">
         <div class="row">
@@ -24,7 +46,7 @@
                     <div class="card-body">
                         <div class="d-flex">
                             <div class="flex-1 overflow-hidden">
-                                <p class="text-truncate font-size-14 mb-2">Number of Visitor</p>
+                                <p class="text-truncate font-size-14 mb-2">Total Schedule</p>
                                 <h4 class="mb-0">152</h4>
                             </div>
                             <div class="text-primary ms-auto">
@@ -35,8 +57,8 @@
 
                     <div class="card-body border-top py-3">
                         <div class="text-truncate">
-                            <span class="badge bg-success-subtle text-success  font-size-11"><i class="mdi mdi-menu-up"> </i> 2.4% </span>
-                            <span class="text-muted ms-2">From previous period</span>
+                            <span class="badge bg-success-subtle text-success  font-size-11">Today</span>
+                            <span class="text-muted ms-2" id="total_schedule">From previous Day</span>
                         </div>
                     </div>
                 </div>
@@ -46,7 +68,7 @@
                     <div class="card-body">
                         <div class="d-flex">
                             <div class="flex-1 overflow-hidden">
-                                <p class="text-truncate font-size-14 mb-2">Total Branch</p>
+                                <p class="text-truncate font-size-14 mb-2">Total Visited</p>
                                 <h4 class="mb-0"> 382</h4>
                             </div>
                             <div class="text-primary ms-auto">
@@ -56,8 +78,8 @@
                     </div>
                     <div class="card-body border-top py-3">
                         <div class="text-truncate">
-                            <span class="badge bg-success-subtle text-success  font-size-11"><i class="mdi mdi-menu-up"> </i> 2.4% </span>
-                            <span class="text-muted ms-2">From previous period</span>
+                            <span class="badge bg-success-subtle text-success  font-size-11">Today</span>
+                            <span class="text-muted ms-2" id="sch-visi">From previous Day</span>
                         </div>
                     </div>
                 </div>
@@ -67,7 +89,7 @@
                     <div class="card-body">
                         <div class="d-flex">
                             <div class="flex-1 overflow-hidden">
-                                <p class="text-truncate font-size-14 mb-2">Total SubBranch</p>
+                                <p class="text-truncate font-size-14 mb-2">Pending Visited</p>
                                 <h4 class="mb-0">85</h4>
                             </div>
                             <div class="text-primary ms-auto">
@@ -77,8 +99,8 @@
                     </div>
                     <div class="card-body border-top py-3">
                         <div class="text-truncate">
-                            <span class="badge bg-success-subtle text-success  font-size-11"><i class="mdi mdi-menu-up"> </i> 2.4% </span>
-                            <span class="text-muted ms-2">Total pending</span>
+                            <span class="badge bg-success-subtle text-success  font-size-11"> Today </span>
+                            <span class="text-muted ms-2" id="sch-pending">From previous Day</span>
                         </div>
                     </div>
                 </div>
@@ -98,8 +120,8 @@
                     </div>
                     <div class="card-body border-top py-3">
                         <div class="text-truncate">
-                            <span class="badge bg-danger-subtle text-success  font-size-11"><i class="mdi mdi-menu-up"> </i> 4 </span>
-                            <span class="text-muted ms-2">Pendding Work</span>
+                            <span class="badge bg-danger-subtle text-success  font-size-11">Today</span>
+                            <span class="text-muted ms-2" id="sch-done">From previous Day</span>
                         </div>
                     </div>
                 </div>
@@ -135,4 +157,35 @@
     <script src="~/js/app.js"></script>
 
 }
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 
+
+<script>
+
+
+    function FilterData (){
+
+        let data=$('#dash_filter').val();
+       
+        let totalScheduleText;
+        if(data==='1'){
+            totalScheduleText="From previous Day";
+        }
+        else if(data==='2'){
+            totalScheduleText="From previous last Month";
+        }
+        else if(data==='3'){
+            totalScheduleText="From previous last Year";
+        }
+        
+
+         $('#total_schedule').text(totalScheduleText);
+         $('#sch-visi').text(totalScheduleText);
+         $('#sch-done').text(totalScheduleText);
+         $('#sch-pending').text(totalScheduleText);
+    }
+
+
+
+   
+</script>
