--- a/ITC.InfoTrack/Areas/Dashboard/Views/Dashboard/Index.cshtml
+++ b/ITC.InfoTrack/Areas/Dashboard/Views/Dashboard/Index.cshtml
@@ -28,8 +28,8 @@
 </style>
 <div class="row">
     <div class="col-xl-12">
-        <div class="d-sm-flex align-items-center float-end mb-1 gap-2">
-            <a href="#" class="btn btn-primary btn-sm">Create Token</a>
+        <div class="d-sm-flex align-items-center justify-content-between float-end mb-1 gap-2">
+            <a href="@Url.Action("TokenCreate", "TokenGenerate", new { area = "TokenGenerate" })" class="btn btn-primary btn-sm">Create Token</a>
             <select class="form-control form-control-sm ms-2" id="dash_filter" onchange="FilterData()" style="width: auto;">
                 <option value="1" selected>Day</option>
                 <option value="2">Month</option>
